# src/api/v1/article/controllers/find-all.js
@@ -1,59 +1,0 @@
-const articleService = require("../../../../lib/article");
-const { generateQueryString } = require("../../../../utils");
-
-const findAll = async (req, res, next) => {
-  const page = req.query.page || 1;
-  const limit = req.query.limit || 10;
-  const sortType = req.query.sort_type || "dsc";
-  const sortBy = req.query.sort_by || "updatedAt";
-  const search = req.query.search || "";
-
-  try {
-    const articles = await articleService.findAll({
-      page,
-      limit,
-      search,
-      sortBy,
-      sortType,
-    });
-
-    const data = articles.map((article) => ({
-      ...article._doc,
-      link: `/articles/${article.id}`,
-    }));
-
-    // pagination
-    const totalItems = await articleService.count({ search });
-    const totalPage = Math.ceil(totalItems / limit);
-
-    const pagination = {
-      page,
-      limit,
-      totalItems,
-      totalPage,
-    };
-
-    if (page < totalPage) pagination.next = page + 1;
-    if (page > 1) pagination.prev = page - 1;
-
-    // HATEOAS Links
-    const links = {
-      self: req.url,
-    };
-
-    if (pagination.next) {
-      const query = generateQueryString({ ...req.query, page: page + 1 });
-      links.next = `${req.path}?${query}`;
-    }
-    if (pagination.prev) {
-      const query = generateQueryString({ ...req.query, page: page - 1 });
-      links.prev = `${req.path}?${query}`;
-    }
-
-    res.status(200).json({ data, pagination, links });
-  } catch (error) {
-    next(error);
-  }
-};
-
-module.exports = findAll;
